--- a/package.json
+++ b/package.json
@@ -22,22 +22,23 @@
   "devDependencies": {
     "@babel/core": "^7.20.12",
     "@babel/node": "^7.20.7",
-    "nodemon": "^2.0.20"
+    "@types/jest": "^29.4.0",
+    "@types/supertest": "^2.0.12",
+    "jest": "^29.4.3",
+    "nodemon": "^2.0.20",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.0.5",
+    "typescript": "^4.9.5"
   },
   "dependencies": {
-    "@types/express": "^4.17.17",
-    "csv-parser": "^3.0.0",
+    "@types/express": "^4.17.17", 
     "csvtojson": "^2.0.10",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "express-validator": "^6.14.3",
-    "fast-csv": "^4.3.6",
-    "jest": "^29.4.3",
     "mongoose": "^6.9.1",
     "npm": "^9.5.0",
     "npm-run-all": "^4.1.5",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^4.9.5",
     "uuid": "^9.0.0"
   }
 }
